# xswl-youdidit

./: .gitignore  .gitmodules  API.md  BUILD_AND_TEST.md  CMakeLists.txt  CODESPACES_FIX_SUMMARY.md  CODESPACES_GUIDE.md  README.md  SCRIPTS_GUIDE.md  SCRIPTS_INVENTORY.md  SCRIPTS_SUMMARY.md  WEB_IMPLEMENTATION_REPORT.md  analyze_tests.py  build_and_test.ps1  build_and_test.sh  clean.sh  compile_commands.json  perf_report.html  quick_test.sh  run_web_demo.sh  test.html  test_httplib  test_httplib.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: Dependencies.cmake  RunFindPackageSmoke.cmake  xswl-youdidit-config.cmake.in
docs/: DEVELOPMENT_PLAN.md  PHASE5_REPORT.md  README.md  WEB_API.md  WEB_MONITORING.md  contributing.md  getting_started.md  todo.md  usage.md
docs/api/: API.md
docs/architecture/: CONCEPTS.md  DEVELOPMENT_PLAN.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE5_REPORT.md  README.md  SIGNAL_SEMANTICS.md
docs/developer/: DEVELOPER_GUIDE.md
docs/getting_started/: BUILD_AND_TEST.md  INTEGRATION.md
docs/maintenance/: CONCURRENCY_FIXES_SUMMARY.md  README.md  concurrent_execution_fix.md  todo.md
docs/ops/: CODESPACES_FIX_SUMMARY.md
docs/scripts/: SCRIPTS_GUIDE.md  SCRIPTS_INVENTORY.md  SCRIPTS_SUMMARY.md
docs/web/: README.md  WEB_API.md  WEB_FEATURE_SUMMARY.md  WEB_IMPLEMENTATION_REPORT.md  WEB_MONITORING.md  WEB_SERVER_IMPLEMENTATION.md
examples/: CMakeLists.txt  basic_usage.cpp  multi_claimer.cpp  perf_monitor.cpp  signals_usage.cpp  web_demo.cpp  web_monitoring.cpp
include/xswl/youdidit/: youdidit.hpp
include/xswl/youdidit/core/: claimer.hpp  task.hpp  task_builder.hpp  task_platform.hpp  types.hpp
include/xswl/youdidit/web/: event_log.hpp  metrics_exporter.hpp  time_replay.hpp  web_dashboard.hpp  web_server.hpp
src/: CMakeLists.txt
src/core/: claimer.cpp  task.cpp  task_builder.cpp  task_platform.cpp  types.cpp
src/web/: event_log.cpp  metrics_exporter.cpp  time_replay.cpp  web_dashboard.cpp  web_server.cpp
tests/: CMakeLists.txt  verify_phase1.cpp
tests/integration/: test_web_api.cpp  test_workflow.cpp
tests/smoke/find_package_consumer/: CMakeLists.txt  main.cpp
tests/unit/: test_claim_race.cpp  test_claimer.cpp  test_concurrent_execution.cpp  test_concurrent_metadata.cpp  test_edge_cases.cpp  test_finalize_idempotent.cpp  test_finalize_race.cpp  test_force_delete_cleanup.cpp  test_resource_leak.cpp  test_signal_once.cpp  test_signals_lifecycle.cpp  test_stress_concurrent_claims.cpp  test_task.cpp  test_task_builder.cpp  test_task_platform.cpp  test_thread_safety.cpp  test_type_traits.cpp  test_types.cpp  test_web.cpp
tools/: convert_encoding.ps1
web/: CMakeLists.txt
web/examples/: CMakeLists.txt  web_demo.cpp
web/include/xswl/youdidit/web/: time_replay.hpp  web_dashboard.hpp
web/legacy/: event_log.cpp  metrics_exporter.cpp  time_replay.cpp  web_dashboard.cpp  web_server.cpp
web/src/: event_log.cpp  metrics_exporter.cpp  optional_inst.cpp  web_dashboard.cpp  web_server.cpp
web/tests/: CMakeLists.txt
web/tests/integration/: test_web_api.cpp
web/tests/unit/: test_web.cpp
